# smart-locker-system

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 55d0f91e0096_seed_initial_data.py  7825fb7598a6_initial_schema.py
backend/src/: main.py
backend/src/core/: database.py
backend/src/domain/: engineer_service.py  models.py  pricing.py  services.py  station_service.py
backend/tests/: conftest.py  test_api.py  test_concurrency.py  test_courier_flow.py  test_notifications.py  test_p2p_flow.py  test_pricing.py  test_retrieval_flow.py  test_setup_engineer.py
backend/tests/unit/: test_hashing_unit.py  test_pricing_unit.py
frontend/: Dockerfile  README.md
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: Header.jsx  LockerGrid.jsx  MobileFeed.jsx  SystemLogs.jsx  UnlockAlert.jsx
frontend/src/components/forms/: CourierForm.jsx  EngineerForm.jsx  InitStationForm.jsx  P2PForm.jsx  RetrievalForm.jsx
