[project]
name = "smart-locker-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.18.5",
  "asyncpg>=0.31.0",
  "fastapi[standard]>=0.139.2",
  "psycopg2-binary>=2.9.12",
  "python-dotenv>=1.2.2",
  "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
  "freezegun>=1.5.5",
  "httpx>=0.28.1",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
]

[tool.fastapi]
entrypoint = "src.main:app"
